duniverse/menhirLib.20200211/test/static/bad/unification-error-in-args.mly
%start<int> a
%token A
%%

a: b(A) {}

b(X): X(A) {}
