duniverse/menhirLib.20200211/test/static/bad/unification-error-in-args.exp
File "unification-error-in-args.mly", line 7, characters 6-7:
Error: does the symbol "X31" expect 0 or 1 argument?
